--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,15 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+
+{% if site.force-https %}
+    <script>
+    // Don't force http when serving the website locally
+    if (!(window.location.host.startsWith("127.0.0.1")) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
+{% endif %}
+
   </head>
 
   <body>
