Update adsense code snippet

--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,9 +1,3 @@
 {% if site.adsbygoogle %}
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "{{ site.adsbygoogle }}",
-          enable_page_level_ads: true
-     });
-</script>
+<script data-ad-client="{{ site.adsbygoogle }}" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 {% endif %}
